--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="smartwind"
         tools:replace="android:label"
-
+        android:requestLegacyExternalStorage="true"
         >
 
         <meta-data
