--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   nfc_manager: ^3.1.0
   shared_preferences: ^2.0.6
   animations: ^2.0.0
+  image_picker: ^0.8.0+3
 
   webview_flutter: ^2.0.8
   permission_handler: ^8.1.1
