--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,10 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
+    dependencies {
+        api 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.2'
+
+    }
     compileSdkVersion 30
 
     sourceSets {
@@ -71,4 +75,5 @@ dependencies {
     implementation 'org.apache.commons:commons-io:1.3.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    api 'com.google.firebase:firebase-ml-vision-face-model:20.0.2'
 }
