--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:replace="android:label"
         android:requestLegacyExternalStorage="true"
         >
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="ocr" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
