--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_crashlytics: ^2.0.6
   firebase_auth: ^1.4.1
   firebase_messaging: ^10.0.2
+  firebase_ml_vision: ^0.12.0+2
   #  --------------------------------------------------
   http: ^0.13.3
   dio: ^4.0.0
@@ -30,9 +31,10 @@ dependencies:
   nfc_manager: ^3.1.0
   shared_preferences: ^2.0.6
   animations: ^2.0.0
-  image_picker: ^0.8.0+3
+  image_picker: ^0.8.1+1
+  native_screenshot: ^1.0.0
 
-  webview_flutter: ^2.0.8
+  webview_flutter: ^2.0.9
   permission_handler: ^8.1.1
   flutter_barcode_scanner: ^2.0.0
   sqflite: ^2.0.0+3
@@ -40,12 +42,9 @@ dependencies:
   flutter_pdfview: ^1.1.0
 
 
-
-
-
 dev_dependencies:
   json_serializable: ^4.1.3
-  build_runner: ^2.0.4
+  build_runner: ^2.0.5
   flutter_test:
     sdk: flutter
   integration_test:
