--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -35,7 +35,7 @@ dependencies:
   jwt_decode: ^0.3.1
 
   webview_flutter: ^2.0.10
-  permission_handler: ^8.1.3
+  permission_handler: ^8.1.4+2
   flutter_barcode_scanner: ^2.0.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
