--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/mnt/Others/AndroidSDK
 flutter.sdk=/home/sampath/snap/flutter/common/flutter
-flutter.buildMode=release
-flutter.versionName=1.0.1
-flutter.versionCode=1
+flutter.buildMode=debug
+flutter.versionName=1.1.2
+flutter.versionCode=3
