--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   nfc_manager: ^3.1.0
   shared_preferences: ^2.0.6
   animations: ^2.0.1
-  image_picker: ^0.8.2
+  image_picker: ^0.8.3
   jwt_decode: ^0.3.1
+  flutter_share: ^2.0.0
 
   webview_flutter: ^2.0.10
   permission_handler: ^8.1.4+2
