Standard Files Update

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/mnt/Others/AndroidSDK
 flutter.sdk=/home/sampath/snap/flutter/common/flutter
-flutter.buildMode=release
-flutter.versionName=1.1.3
-flutter.versionCode=4
+flutter.buildMode=debug
+flutter.versionName=1.1.4
+flutter.versionCode=5
