--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.3+4
+version: 1.1.4+5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -31,22 +31,22 @@ dependencies:
   nfc_manager: ^3.1.0
   shared_preferences: ^2.0.6
   animations: ^2.0.1
-  image_picker: ^0.8.3
+  image_picker: ^0.8.3+2
   jwt_decode: ^0.3.1
   flutter_share: ^2.0.0
 
-  webview_flutter: ^2.0.10
+  webview_flutter: ^2.0.12
   permission_handler: ^8.1.4+2
   flutter_barcode_scanner: ^2.0.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   flutter_pdfview: ^1.1.0
   hex: ^0.2.0
-
+  package_info_plus: ^1.0.4
 
 dev_dependencies:
   json_serializable:
-  build_runner: ^2.1.0
+  build_runner: ^2.1.1
   flutter_test:
     sdk: flutter
   integration_test:
