--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   firebase_messaging: ^10.0.4
   google_ml_vision: ^0.0.6
   #  --------------------------------------------------
-  http: ^0.13.3
+#  http: ^0.13.3
   dio: ^4.0.0
   percent_indicator: ^3.0.1
   nfc_manager: ^3.1.0
