--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,12 @@
-sdk.dir=/mnt/Others/AndroidSDK
-flutter.sdk=/home/sampath/snap/flutter/common/flutter
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Sun Aug 22 02:27:59 IST 2021
+sdk.dir=/mnt/iProject/AndroidSDK
 flutter.buildMode=debug
-flutter.versionName=1.1.4
-flutter.versionCode=5
+flutter.versionCode=7
+flutter.sdk=/home/sampath/snap/flutter/common/flutter
+flutter.versionName=1.1.6
