--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.6+7
+version: 1.1.6+11
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -17,40 +17,44 @@ dependencies:
   cupertino_icons: ^1.0.3
 
   #  firebase------------------------------------------
-  firebase_core: ^1.5.0
+  firebase_core: ^1.6.0
   firebase_analytics:
-  firebase_crashlytics: ^2.2.0
-  firebase_auth: ^3.0.2
-  firebase_messaging: ^10.0.5
-  google_ml_vision: ^0.0.6
+  firebase_crashlytics: ^2.2.1
+  firebase_auth: ^3.1.0
+  firebase_messaging: ^10.0.6
+  google_ml_vision: ^0.0.7
+
   #  --------------------------------------------------
   dio: ^4.0.0
   percent_indicator: ^3.0.1
   nfc_manager: ^3.1.0
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.0.7
   animations: ^2.0.1
-  image_picker: ^0.8.3+2
+  image_picker: ^0.8.4
   jwt_decode: ^0.3.1
   flutter_share: ^2.0.0
 
   webview_flutter: ^2.0.12
   permission_handler: ^8.1.4+2
   flutter_barcode_scanner: ^2.0.0
-  sqflite: ^2.0.0+3
-  path_provider: ^2.0.2
-  flutter_pdfview: ^1.1.0
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.3
+  flutter_pdfview: ^1.2.1
   hex: ^0.2.0
-  package_info_plus: ^1.0.5
+  package_info_plus: ^1.0.6
 
   dropdown_search: ^0.6.3
   measured_size: ^1.0.0
+
+  imei_plugin: ^1.2.0
+  device_info: ^2.0.2
 
   custom_webview:
     path: ./Pugins/custom_webview
 
 dev_dependencies:
   json_serializable:
-  build_runner: ^2.1.1
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
   integration_test:
