--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -4,10 +4,9 @@ FLUTTER_APPLICATION_PATH=/mnt/iProject/NorthSails/SmartWind/smartwind
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
 FLUTTER_BUILD_NAME=1.1.6
 FLUTTER_BUILD_NUMBER=11
-EXCLUDED_ARCHS[sdk=iphonesimulator*]=arm64 i386
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
