--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.sampathkumara.northsails.smartwind">
 
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"  />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -18,7 +19,9 @@
         android:label="Smart Wind"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
-        tools:replace="android:label">
+        tools:replace="android:label"
+        android:value="2"
+        >
 
         <provider
             android:name="androidx.core.content.FileProvider"
