--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.6+11
+version: 1.1.6+15
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -28,17 +28,17 @@ dependencies:
   dio: ^4.0.0
   percent_indicator: ^3.0.1
   nfc_manager: ^3.1.0
-  shared_preferences: ^2.0.7
+  shared_preferences: ^2.0.8
   animations: ^2.0.1
-  image_picker: ^0.8.4
+  image_picker: ^0.8.4+2
   jwt_decode: ^0.3.1
   flutter_share: ^2.0.0
-
-  webview_flutter: ^2.0.13
-  permission_handler: ^8.1.6
   flutter_barcode_scanner: ^2.0.0
+
+  webview_flutter: ^2.1.0
+  permission_handler: ^8.1.6
   sqflite: ^2.0.0+4
-  path_provider: ^2.0.3
+  path_provider: ^2.0.5
   flutter_pdfview: ^1.2.1
   hex: ^0.2.0
   package_info_plus: ^1.0.6
@@ -46,7 +46,7 @@ dependencies:
   dropdown_search: ^1.0.0
   measured_size: ^1.0.0
 
-#  imei_plugin: ^1.2.0
+  #  imei_plugin: ^1.2.0
   device_information: ^0.0.4
   device_info: ^2.0.2
 
