--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/mnt/iProject/AndroidSDK
-flutter.buildMode=debug
-flutter.versionCode=20
+flutter.buildMode=release
+flutter.versionCode=28
 flutter.sdk=/home/sampath/snap/flutter/common/flutter
-flutter.versionName=1.1.6
+flutter.versionName=1.1.10
