--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.6+20
+version: 1.1.10+28
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -14,50 +14,54 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.4
 
   #  firebase------------------------------------------
-  firebase_core: ^1.7.0
+  firebase_core: ^1.10.0
   firebase_analytics:
-  firebase_crashlytics: ^2.2.3
-  firebase_auth: ^3.1.3
-  firebase_messaging: ^10.0.8
+  firebase_crashlytics: ^2.3.0
+  firebase_auth: ^3.2.0
+  firebase_messaging: ^11.1.0
   google_ml_vision: ^0.0.7
 
   #  --------------------------------------------------
-  dio: ^4.0.0
+  dio: ^4.0.3
   percent_indicator: ^3.4.0
   nfc_manager: ^3.1.0
   shared_preferences: ^2.0.8
-  animations: ^2.0.1
-  image_picker: ^0.8.4+2
+  animations: ^2.0.2
+  image_picker: ^0.8.4+4
+   
   jwt_decode: ^0.3.1
   flutter_share: ^2.0.0
   flutter_barcode_scanner: ^2.0.0
 
-  webview_flutter: ^2.1.1
-  permission_handler: ^8.2.2
+  webview_flutter: ^2.3.1
+  permission_handler: ^8.3.0
   sqflite: ^2.0.0+4
-  path_provider: ^2.0.5
+  path_provider: ^2.0.7
   flutter_pdfview: ^1.2.1
   hex: ^0.2.0
   package_info_plus: ^1.3.0
 
-  dropdown_search: ^1.0.3
+  dropdown_search: ^2.0.1
   measured_size: ^1.0.0
 
   #  imei_plugin: ^1.2.0
   device_information: ^0.0.4
-  device_info: ^2.0.2
-  firebase_database: ^8.0.0
+  device_info: ^2.0.3
+  firebase_database: ^8.1.0
+  native_pdf_view: ^5.0.0
 
 
   custom_webview:
     path: ./Pugins/custom_webview
+  json_annotation: ^4.3.0
+  flutter_inappwebview: ^5.3.2
 
 dev_dependencies:
   json_serializable:
-  build_runner: ^2.1.4
+  build_runner: ^2.1.5
   flutter_test:
     sdk: flutter
   integration_test:
