--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/home/sampath/snap/flutter/common/flutter
-FLUTTER_APPLICATION_PATH=/mnt/iProject/NorthSails/SmartWind/smartwind
+FLUTTER_ROOT=D:\SDK\flutter
+FLUTTER_APPLICATION_PATH=D:\Projects\NorthSails\SmartWind\smartwind
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=1.1.8
-FLUTTER_BUILD_NUMBER=27
+FLUTTER_BUILD_NAME=1.1.11
+FLUTTER_BUILD_NUMBER=30
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=false
