--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   dio: ^4.0.3
   percent_indicator: ^4.0.0
   nfc_manager: ^3.1.0
-#  shared_preferences: ^2.0.8
+  shared_preferences: ^2.0.8
   animations: ^2.0.2
   image_picker: ^0.8.4+4
 
