--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,14 +91,14 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
-    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.firebase:firebase-analytics:20.1.0'
     implementation 'com.tom_roush:pdfbox-android:1.8.10.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.azeesoft.lib.colorpicker:colorpicker:1.0.8@aar'
     implementation 'com.github.barteksc:pdfium-android:1.9.0'
     implementation 'org.apache.commons:commons-io:1.3.2'
@@ -107,9 +107,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.5.20"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
 
-    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.webkit:webkit:1.4.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-inline:3.11.1'
