--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,7 +68,7 @@ android {
     }
     buildTypes {
         release {
-
+//            debuggable true
             // Signing with the debug keys for now, so `flutter run --release` works.
 //            signingConfig signingConfigs.debug
             signingConfig signingConfigs.release
