--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.15+36
+version: 1.1.15+41
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -69,6 +69,7 @@ dependencies:
   decorated_icon: ^1.2.1
   native_pdf_view: ^6.0.0+1
   ota_update: ^4.0.1
+#  pdfx: ^1.0.1+1
 
 dev_dependencies:
   hive_generator: ^1.1.1
@@ -78,6 +79,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+
 
 
 flutter:
