--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=D\:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
+sdk.dir=D:\\SDK\\AndroidSDK_Windows
+flutter.buildMode=debug
 flutter.versionCode=47
-flutter.sdk=D\:\\SDK\\flutter
+flutter.sdk=D:\\SDK\\flutter
 flutter.versionName=1.1.15
