--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionCode=48
 flutter.sdk=D:\\SDK\\flutter
 flutter.versionName=1.1.15
