--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,38 +11,38 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
+  flutter_web_plugins:
     sdk: flutter
 
   #  cupertino_icons: ^1.0.4
 
   #  firebase------------------------------------------
-  firebase_core: ^1.10.0
+  firebase_core: ^1.14.0
   firebase_analytics:
-  firebase_crashlytics: ^2.3.0
-  firebase_auth: ^3.2.0
-  firebase_messaging: ^11.1.0
+  firebase_crashlytics: ^2.6.1
+  firebase_auth: ^3.3.12
+  firebase_messaging: ^11.2.12
   #  google_ml_vision: ^0.0.7
 
   #  --------------------------------------------------
-  dio: ^4.0.3
+  dio: ^4.0.6
   percent_indicator: ^4.0.0
-  nfc_manager: ^3.1.0
-  shared_preferences: ^2.0.8
+  nfc_manager: ^3.1.1
+  shared_preferences: ^2.0.13
   animations: ^2.0.2
-  image_picker: ^0.8.4+4
+  image_picker: ^0.8.5
 
   jwt_decode: ^0.3.1
   flutter_share: ^2.0.0
   flutter_barcode_scanner: ^2.0.0
 
-  webview_flutter: ^3.0.0
-  permission_handler: ^9.1.0
+  webview_flutter: ^3.0.2
+  permission_handler: ^9.2.0
   #  sqflite: ^2.0.0+4
-  path_provider: ^2.0.7
-  flutter_pdfview: ^1.2.1
+  path_provider: ^2.0.9
+  flutter_pdfview: ^1.2.2
   hex: ^0.2.0
-  package_info_plus: ^1.3.0
+  package_info_plus: ^1.4.2
 
   dropdown_search: ^2.0.1
   measured_size: ^1.0.0
@@ -50,9 +50,9 @@ dependencies:
   #  imei_plugin: ^1.2.0
   device_information: ^0.0.4
   device_info: ^2.0.3
-  firebase_database: ^9.0.5
+  firebase_database: ^9.0.9
   cached_network_image: ^3.2.0
-  video_player: ^2.2.11
+  video_player: ^2.3.0
   group_list_view: ^1.1.1
   data_table_2: ^2.2.1
 
@@ -61,10 +61,10 @@ dependencies:
     path: ./Pugins/custom_webview
   json_annotation: ^4.4.0
   flutter_inappwebview: ^5.3.2
-  graphql_flutter: ^5.0.0
-  hive: ^2.0.4
+  graphql_flutter: ^5.0.1
+  hive: ^2.1.0
   hive_flutter: ^1.1.0
-  uuid: ^3.0.5
+  uuid: ^3.0.6
 
   splash_screen_view: ^3.0.0
   decorated_icon: ^1.2.1
@@ -72,15 +72,16 @@ dependencies:
   ota_update: ^4.0.1
   timeline_tile: ^2.0.0
   flutter_dropzone: ^3.0.5
-  excel: ^2.0.0-null-safety-3
+#  excel: ^1.1.5
   dotted_border: ^2.0.0+2
-  socket_io_client: ^2.0.0-beta.4-nullsafety.0
-  file_picker: ^4.2.7
+  socket_io_client: ^1.0.2
+  file_picker: ^4.5.1
+  universal_html: ^2.0.8
 
 dev_dependencies:
-  hive_generator: ^1.1.1
+  hive_generator: ^1.1.2
   json_serializable:
-  build_runner: ^2.1.7
+  build_runner: ^2.1.8
   flutter_test:
     sdk: flutter
   integration_test:
