--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,12 @@ description: NorthSails Smart Wind
 publish_to: 'none'
 
 
-version: 1.1.15+48
+version: 1.1.15+49
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter_web_plugins:
-    sdk: flutter
 
   #  cupertino_icons: ^1.0.4
 
@@ -20,7 +18,7 @@ dependencies:
   firebase_core: ^1.14.0
   firebase_analytics:
   firebase_crashlytics: ^2.6.1
-  firebase_auth: ^3.3.12
+  firebase_auth: ^3.3.13
   firebase_messaging: ^11.2.12
   #  google_ml_vision: ^0.0.7
 
@@ -50,7 +48,7 @@ dependencies:
   #  imei_plugin: ^1.2.0
   device_information: ^0.0.4
   device_info: ^2.0.3
-  firebase_database: ^9.0.9
+  firebase_database: ^9.0.10
   cached_network_image: ^3.2.0
   video_player: ^2.3.0
   group_list_view: ^1.1.1
@@ -86,8 +84,8 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-
-
+  build_web_compilers: ^3.2.2
+  flutter_lints: ^1.0.4
 
 flutter:
 
