--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
         viewBinding true
     }
 
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -54,7 +54,7 @@ android {
 
         applicationId "com.sampathkumara.northsails.smartwind"
         minSdkVersion 26
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -73,6 +73,7 @@ android {
 //            signingConfig signingConfigs.debug
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
         }
 //        profile {
 //
@@ -83,7 +84,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildToolsVersion '32.0.0'
+    buildToolsVersion '32.1.0-rc1'
 }
 
 flutter {
@@ -91,23 +92,24 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
-    implementation platform('com.google.firebase:firebase-bom:28.0.1')
-    implementation 'com.google.firebase:firebase-analytics:20.1.0'
-    implementation 'com.tom_roush:pdfbox-android:1.8.10.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
+    implementation 'com.google.firebase:firebase-analytics:21.0.0'
+//    implementation 'com.tom_roush:pdfbox-android:1.8.10.0'
+    implementation 'com.tom-roush:pdfbox-android:2.0.21.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.azeesoft.lib.colorpicker:colorpicker:1.0.8@aar'
     implementation 'com.github.barteksc:pdfium-android:1.9.0'
     implementation 'org.apache.commons:commons-io:1.3.2'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
-    implementation platform('com.google.firebase:firebase-bom:28.0.1')
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.4'
+    implementation platform('com.google.firebase:firebase-bom:30.0.1')
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
 
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.webkit:webkit:1.4.0'
