--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,42 +17,42 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^1.16.0
+  firebase_core: ^1.17.0
   firebase_analytics:
-  firebase_crashlytics: ^2.7.2
-  firebase_auth: ^3.3.17
-  firebase_messaging: ^11.3.0
+  firebase_crashlytics: ^2.8.0
+  firebase_auth: ^3.3.18
+  firebase_messaging: ^11.4.0
 
   #  --------------------------------------------------
   dio: ^4.0.6
-  percent_indicator: ^4.0.1
+  percent_indicator: ^4.2.2
   nfc_manager: ^3.1.1
-  shared_preferences: ^2.0.13
+  shared_preferences: ^2.0.15
   animations: ^2.0.2
-  image_picker: ^0.8.5
+  image_picker: ^0.8.5+3
 
   jwt_decode: ^0.3.1
   flutter_share: ^2.0.0
 
   flutter_barcode_scanner: ^2.0.0
 
-  webview_flutter: ^3.0.2
+  webview_flutter: ^3.0.4
   permission_handler: ^9.2.0
-  path_provider: ^2.0.9
+  path_provider: ^2.0.10
   flutter_pdfview: ^1.2.2
   hex: ^0.2.0
   package_info_plus: ^1.4.2
 
-  dropdown_search: ^3.0.1
+  dropdown_search: ^4.0.1
   measured_size: ^1.0.0
 
   device_information: ^0.0.4
   device_info: ^2.0.3
-  firebase_database: ^9.0.13
-  cached_network_image: ^3.2.0
-  video_player: ^2.4.0
+  firebase_database: ^9.0.14
+  cached_network_image: ^3.2.1
+  video_player: ^2.4.2
   group_list_view: ^1.1.1
-  data_table_2: ^2.2.1
+  data_table_2: ^2.2.2
 
 
   custom_webview:
@@ -60,7 +60,7 @@ dependencies:
   json_annotation: ^4.5.0
   flutter_inappwebview: ^5.4.3+7
   graphql_flutter: ^5.1.0
-  hive: ^2.1.0
+  hive: ^2.2.1
   hive_flutter: ^1.1.0
   uuid: ^3.0.6
 
@@ -73,27 +73,47 @@ dependencies:
   socket_io_client: ^1.0.2
   file_picker: ^4.5.1
   universal_html: ^2.0.8
-  dropdown_button2: ^1.4.0
+  dropdown_button2: ^1.5.1
   pdfx: ^2.0.1+2
   textfield_search: ^0.10.0
-  searchfield: ^0.6.4
+  searchfield: ^0.6.5
   csv: ^5.0.1
-  pdf_render: ^1.0.23
+  pdf_render: ^1.1.0
+  syncfusion_flutter_charts: ^20.1.56
 
 
 dev_dependencies:
 
-  hive_generator: ^1.1.2
+  hive_generator: ^1.1.3
   json_serializable:
-  build_runner: ^2.1.10
+  build_runner: ^2.1.11
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
   build_web_compilers: ^3.2.3
-  flutter_lints: ^1.0.4
+  flutter_lints: ^2.0.1
 
 flutter:
+
+  assets:
+    - assets/fonts/NsIcons.ttf
+    - assets/images/background.jpg
+    - assets/images/user.png
+    - assets/images/userPlaceholder.jpg
+    - assets/js.js
+    - assets/js1.txt
+    - assets/loginVideo.mp4
+    - assets/north_sails-logo.png
+    - assets/north_sails-logo_tr.png
+    - assets/north_sails-logox50.png
+    - assets/QACheckList.json
+    - assets/splash.png
+    - assets/splash1.png
+    - assets/uc.png
+    - assets/uc1.png
+    - assets/x.pdf
+
 
   uses-material-design: true
   fonts:
@@ -102,8 +122,7 @@ flutter:
         - asset: assets/fonts/NsIcons.ttf
 
 
-  assets:
-    - assets/
+
 
 
 
