--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-
-version: 1.1.37+77
+version: 1.1.42+82
 
 environment:
   sdk: ">=2.12.0 <4.0.0"
@@ -17,12 +16,12 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^1.17.1
+  firebase_core: ^1.18.0
   firebase_analytics:
-  firebase_crashlytics: ^2.8.1
-  firebase_auth: ^3.3.19
-  firebase_messaging: ^11.4.1
-  firebase_database: ^9.0.15
+  firebase_crashlytics: ^2.8.2
+  firebase_auth: ^3.3.20
+  firebase_messaging: ^11.4.2
+  firebase_database: ^9.0.16
 
   #  --------------------------------------------------
 
@@ -41,7 +40,7 @@ dependencies:
   image_picker: ^0.8.5+3
   jwt_decode: ^0.3.1
   webview_flutter: ^3.0.4
-  permission_handler: ^9.2.0
+  permission_handler: ^10.0.0
   path_provider: ^2.0.11
   hex: ^0.2.0
   package_info_plus: ^1.4.2
@@ -50,9 +49,9 @@ dependencies:
   device_information: ^0.0.4
   device_info: ^2.0.3
   cached_network_image: ^3.2.1
-  video_player: ^2.4.4
+  video_player: ^2.4.5
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.0
+  data_table_2: ^2.3.1
 
 
   custom_webview:
@@ -60,7 +59,7 @@ dependencies:
   json_annotation: ^4.5.0
 
   graphql_flutter: ^5.1.0
-  hive: ^2.2.1
+  hive: ^2.2.2
   hive_flutter: ^1.1.0
   uuid: ^3.0.6
 
@@ -73,13 +72,13 @@ dependencies:
   socket_io_client: ^1.0.2
   file_picker: ^4.6.1
   universal_html: ^2.0.8
-  dropdown_button2: ^1.5.3
+  dropdown_button2: ^1.6.2
   pdfx: ^2.0.1+2
   textfield_search: ^0.10.0
-  searchfield: ^0.6.5
+  searchfield: ^0.6.6
   csv: ^5.0.1
   pdf_render: ^1.1.0
-  syncfusion_flutter_charts: ^20.1.59
+  syncfusion_flutter_charts: ^20.1.60+1
   random_password_generator: ^0.2.1
 
 
