--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.1.42+82
+version: 1.1.44+84
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -51,7 +51,7 @@ dependencies:
   cached_network_image: ^3.2.1
   video_player: ^2.4.5
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.1
+  data_table_2: ^2.3.3
 
 
   custom_webview:
@@ -78,7 +78,7 @@ dependencies:
   searchfield: ^0.6.6
   csv: ^5.0.1
   pdf_render: ^1.1.0
-  syncfusion_flutter_charts: ^20.1.60+1
+  syncfusion_flutter_charts: ^20.1.61
   random_password_generator: ^0.2.1
 
 
