--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
-flutter.versionCode=117
+flutter.buildMode=debug
+flutter.versionCode=126
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.1.77
+flutter.versionName=1.1.86
