--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.1.77+117
+version: 1.1.87+127
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -16,20 +16,20 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^1.19.1
+  firebase_core: ^1.21.0
   #  firebase_analytics:
-  firebase_crashlytics: ^2.8.4
-  firebase_auth: ^3.4.1
-  firebase_messaging: ^11.4.4
-  firebase_database: ^9.0.18
-  firebase_auth_platform_interface: 6.3.1
-  firebase_core_web: 1.6.6
+  firebase_crashlytics: ^2.8.8
+  firebase_auth: ^3.6.4
+  firebase_messaging: ^12.0.3
+  firebase_database: ^9.1.2
+  firebase_auth_platform_interface: ^6.5.4
+  firebase_core_web: ^1.7.1
 
   #  --------------------------------------------------
 
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
-  flutter_pdfview: ^1.2.2
+  flutter_pdfview: ^1.2.3
   flutter_inappwebview: ^5.4.3+7
   flutter_dropzone: ^3.0.5
 
@@ -45,15 +45,15 @@ dependencies:
   permission_handler: ^10.0.0
   path_provider: ^2.0.11
   hex: ^0.2.0
-  package_info_plus: ^1.4.2
+  package_info_plus: ^1.4.3+1
   dropdown_search: ^5.0.2
   measured_size: ^1.0.0
   device_information: ^0.0.4
   device_info: ^2.0.3
   cached_network_image: ^3.2.1
-  video_player: ^2.4.5
+  video_player: ^2.4.6
   group_list_view: ^1.1.1
-  data_table_2: ^2.3.5
+  data_table_2: ^2.3.6
 
 
   custom_webview:
@@ -72,20 +72,21 @@ dependencies:
 
   dotted_border: ^2.0.0+2
   socket_io_client: ^2.0.0
-  file_picker: ^4.6.1
+  file_picker: ^5.0.1
   universal_html: ^2.0.8
-  dropdown_button2: ^1.6.3
-  pdfx: 2.0.1+2
+  dropdown_button2: ^1.7.2
+  pdfx: ^2.2.0
   textfield_search: ^0.10.0
-  searchfield: ^0.6.6
+  searchfield: ^0.6.9
   csv: ^5.0.1
-  pdf_render: ^1.1.0
-  syncfusion_flutter_charts: ^20.2.39
+  pdf_render: ^1.3.1
+  syncfusion_flutter_charts: ^20.2.44
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
   contextmenu: ^3.0.0
+  syncfusion_flutter_datepicker: ^20.2.44
 
 
 
@@ -99,7 +100,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  build_web_compilers: ^3.2.4
+  build_web_compilers: ^3.2.5
   flutter_lints: ^2.0.1
 
 flutter:
