--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=debug
-flutter.versionCode=156
+flutter.buildMode=release
+flutter.versionCode=158
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.2.16
+flutter.versionName=1.2.18
