--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=release
-flutter.versionCode=165
+flutter.buildMode=debug
+flutter.versionCode=168
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.2.25
+flutter.versionName=1.2.28
