--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.25+165
+version: 1.2.28+168
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -16,12 +16,12 @@ dependencies:
     sdk: flutter
 
   #  firebase------------------------------------------
-  firebase_core: ^2.1.1
-  firebase_crashlytics: ^3.0.4
-  firebase_auth: ^4.1.1
-  firebase_messaging: ^14.0.4
-  firebase_database: ^10.0.4
-  firebase_auth_platform_interface: ^6.11.1
+  firebase_core: ^2.3.0
+  firebase_crashlytics: ^3.0.6
+  firebase_auth: ^4.1.3
+  firebase_messaging: ^14.1.1
+  firebase_database: ^10.0.6
+  firebase_auth_platform_interface: ^6.11.3
   firebase_core_web: ^2.0.1
 
   #  --------------------------------------------------
@@ -29,7 +29,7 @@ dependencies:
   flutter_share: 2.0.0
   flutter_barcode_scanner: ^2.0.0
   flutter_pdfview: ^1.2.5
-  flutter_inappwebview: ^5.7.1
+  flutter_inappwebview: ^5.7.1+1
   flutter_dropzone: ^3.0.5
 
   #  --------------------------------------------------
@@ -44,7 +44,7 @@ dependencies:
   permission_handler: ^10.2.0
   path_provider: ^2.0.11
   hex: ^0.2.0
-  package_info_plus: ^3.0.1
+  package_info_plus: ^3.0.2
   dropdown_search: ^5.0.3
   measured_size: ^1.0.0
   device_information: ^0.0.4
@@ -62,7 +62,7 @@ dependencies:
   graphql_flutter: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  uuid: ^3.0.6
+  uuid: ^3.0.7
 
   splash_screen_view: ^3.0.0
   decorated_icon: ^1.2.1
@@ -78,21 +78,21 @@ dependencies:
   textfield_search: ^0.10.0
   searchfield: ^0.7.2
   csv: ^5.0.1
-  pdf_render: ^1.3.4
-  syncfusion_flutter_charts: ^20.3.56
+  pdf_render: ^1.3.6
+  syncfusion_flutter_charts: ^20.3.57
   random_password_generator: ^0.2.1
   flutter_slidable: ^2.0.0
   intl: ^0.17.0
   app_settings: ^4.1.8
   contextmenu: ^3.0.0
-  syncfusion_flutter_datepicker: ^20.3.56
+  syncfusion_flutter_datepicker: ^20.3.57
   badges: ^2.0.3
   just_the_tooltip: ^0.0.12
   url_launcher: ^6.1.6
 
-  json_theme: ^4.0.2+3
-  syncfusion_flutter_sliders: ^20.3.56
-  syncfusion_flutter_pdfviewer: ^20.3.56
+  json_theme: ^4.0.3+1
+  syncfusion_flutter_sliders: ^20.3.57
+  syncfusion_flutter_pdfviewer: ^20.3.57
 
 
 
