after beta create

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=D:\\SDK\\AndroidSDK_Windows
-flutter.buildMode=debug
-flutter.versionCode=225
+flutter.buildMode=release
+flutter.versionCode=227
 flutter.sdk=D:\\SDK\\flutter
-flutter.versionName=1.2.85
+flutter.versionName=1.2.87
