--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,15 +17,15 @@
 
     <application
 
-        android:usesCleartextTraffic="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
-        tools:replace="android:label"
+        android:usesCleartextTraffic="true"
         android:value="2"
-        android:dataExtractionRules="@xml/data_extraction_rules"
+        tools:replace="android:label"
         tools:targetApi="s">
 
 
@@ -85,9 +85,9 @@
             android:value="2" />
 
         <activity
-            android:exported="true"
             android:name="com.pdfEditor.MainEditorActivity"
             android:configChanges="orientation|screenSize"
+            android:exported="true"
             android:grantUriPermissions="true"
             android:label="main Editor"
             android:screenOrientation="portrait"
@@ -115,6 +115,22 @@
             <!--                                        <action android:name="android.intent.action.MAIN" />-->
             <!--                                        <category android:name="android.intent.category.LAUNCHER" />-->
             <!--                                    </intent-filter>-->
+
+        </activity>
+        <activity
+            android:name="com.Rf.Rf"
+            android:configChanges="orientation"
+            android:exported="true"
+            android:grantUriPermissions="true"
+            android:label="Rf"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme1"
+            android:windowSoftInputMode="adjustPan">
+
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
 
         </activity>
 
