--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: NorthSails Smart Wind
 
 publish_to: 'none'
 
-version: 1.2.85+225
+version: 1.2.87+227
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -126,6 +126,9 @@ flutter:
     - assets/android/
     - assets/fonts/
     - assets/images/
+    - assets/rf/
+    - assets/rf/RF-SMARTLogin1_files/
+    - assets/rf/RF-SMARTLogin_files/
   uses-material-design: true
   fonts:
     - family: NsIcons
